# ai-buttons

./: .env.example  .gitignore  DEPLOY.md  GITHUB_SETUP.md  README.md  ai_buttons_gen.py  generate_test_leads.py  lead_api.py  pyproject.toml  requirements.txt  run_dev.ps1  setup.ps1  setup.sh  streamlit_app.py
ai_buttons/: __init__.py  airtable_lead.py  cli.py  config.py  extract.py  fetch.py  pipeline.py  prompt.py  providers.py  render.py  security.py
archive/: README.md  README_ai_buttons.md  config_sample.json  wanilia_snippet.html  wzor.txt
archive/snippets/: fizjoterapia2_0_pl_20260216_170509.html  fizjoterapia2_0_pl_20260216_170644.html  fizjoterapia2_0_pl_20260216_170719.html  fizjoterapia2_0_pl_20260216_170759.html  wanilia_pl_20260216_164904.html  wanilia_pl_20260216_165100.html  wanilia_pl_20260216_170025.html  wanilia_pl_20260216_170452.html  wanilia_pl_20260216_170847.html
config/: config.sample.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  HOW_IT_WORKS.md  LEAD_AIRTABLE.md  POROWNANIE_WZOR_VS_V3.md  PROMPT_MODES.md  USAGE.md
templates/: prompt_en_default.txt  prompt_en_injection.txt  prompt_pl_default.txt  prompt_pl_injection.txt
